show "hello-world"

--- a/application/configs/application.yaml
+++ b/application/configs/application.yaml
@@ -26,6 +26,8 @@ production:
                 username: sudoku
                 password: sudoku
                 dbname: sudoku
+        layout:
+            layoutPath: APPLICATION_PATH/layouts/scripts/
 
 staging:
     _extends: production
