Game Sync. Check Board hash. Load game by Game hash.

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -4,3 +4,9 @@ routes.sudoku.route = :controller/:action/*
 routes.sudoku.defaults.module = sudoku
 routes.sudoku.defaults.controller = index
 routes.sudoku.defaults.action = index
+
+routes.sudoku-game.route = sudoku/game/:gameHash
+routes.sudoku-game.defaults.module = sudoku
+routes.sudoku-game.defaults.controller = index
+routes.sudoku-game.defaults.action = game
+
