Rus, routes, less, index page, etc.

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -1,11 +1,21 @@
 [production]
 
-routes.sudoku.route = :controller/:action/*
+routes.default.route = :module/:controller/:action/*
+routes.default.defaults.module = sudoku
+routes.default.defaults.controller = index
+routes.default.defaults.action = index
+
+routes.sudoku-default.route = :controller/:action/*
+routes.sudoku-default.defaults.module = sudoku
+routes.sudoku-default.defaults.controller = index
+routes.sudoku-default.defaults.action = index
+
+routes.sudoku.route = :action/*
 routes.sudoku.defaults.module = sudoku
 routes.sudoku.defaults.controller = index
 routes.sudoku.defaults.action = index
 
-routes.sudoku-game.route = sudoku/game/:gameHash
+routes.sudoku-game.route = game/:gameHash
 routes.sudoku-game.defaults.module = sudoku
 routes.sudoku-game.defaults.controller = index
 routes.sudoku-game.defaults.action = game
