Index page, Create new game, fixes

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -10,7 +10,7 @@ routes.sudoku-default.defaults.module = sudoku
 routes.sudoku-default.defaults.controller = index
 routes.sudoku-default.defaults.action = index
 
-routes.sudoku.route = :action/*
+routes.sudoku.route = sudoku/:action/*
 routes.sudoku.defaults.module = sudoku
 routes.sudoku.defaults.controller = index
 routes.sudoku.defaults.action = index
