--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
+    "autoload": {
+        "psr-0": {
+            "MyApp": "src"
+        }
+    },
     "require": {
-        "cboden/Ratchet": "0.3.*"
+        "cboden/Ratchet": "0.3.*",
+        "react/zmq": "0.2.*",
+        "moriony/php-zmq-stubs": "dev-master"
     }
 }
